--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="input-container">
             <input type="text" id="user-input" placeholder="Type your message here..." />
-            <button onclick="sendMessage()">Send</button>
+            <button id="send-button">Send</button>
         </div>
     </div>
     <script src="script.js"></script>
